feat(CheckStyle): Add a checkstyle task on build process
- Add checkstyle java library
- add sun and google rules set
- adapt build.sh script to propose the 'k' option.